# simple_rich_app

./: pyproject.toml  simple_rich_app.py
