[project]
name = "simple-rich-app"
version = "0.1.0"
description = "A simple app to show Poetry and rich."
authors = [
    {name = "Pablo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "gridlock == 2.0.0"
]

[project.scripts]
simple-app = "simple_rich_app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
